--- a/main.css
+++ b/main.css
@@ -62,9 +62,7 @@ a:link, a:visited {
 }
 
 #navigation-bar a {
-    color: #0f4641;
-    color: white;
-    text-shadow: 1px 2px 0 rgba(0,0,0,0.9);
+    color: #0b4141;
 }
 
 #navigation-bar a:hover {
@@ -119,8 +117,7 @@ a:link, a:visited {
     min-width: 200px;
     font-family: 'Comfortaa', cursive;
     font-size: 25px;
-    color: white;
-    text-shadow: 2px 2px 0 rgba(0,0,0,0.9);
+    color: #0b4141;
     letter-spacing: 2px;
     line-height: 1.5;
 }
@@ -134,8 +131,7 @@ a:link, a:visited {
     text-align: center;
     font-size: 30px;
     font-family: 'Comfortaa', cursive;
-    color: white;
-    text-shadow: 2px 2px 0 rgba(0,0,0,0.9);
+    color: #0b4141;
     padding-bottom: 20px;
     padding-top: calc(var(--offset) + 15px);
 }
@@ -197,8 +193,7 @@ a:link, a:visited {
     padding: 30px 0px 100px 0px;
     font-size: 30px;
     font-family: 'Comfortaa', cursive;
-    color: white;
-    text-shadow: 2px 2px 0 rgba(0,0,0,0.9);
+    color: #0b4141;
 }
 
 .flip-card {
