--- a/main.css
+++ b/main.css
@@ -67,6 +67,7 @@ a:link, a:visited {
 
 #navigation-bar a:hover {
     color: #00c4b3;
+    text-shadow: 2px 2px 0 rgba(0,0,0,0.9);
     font-size: 27px;
 }
 
