--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ a:link, a:visited {
 }
 
 #navigation-bar a:hover {
-    color: #00c4b3;
+    color: #0047B3;
     text-shadow: 2px 2px 0 rgba(0,0,0,0.9);
     font-size: 27px;
 }
@@ -273,7 +273,7 @@ a:link, a:visited {
 }
 
 .flip-card-back a:hover {
-    color: #00c4b3;
+    color: #0047B3;
 }
 
 
