--- a/main.css
+++ b/main.css
@@ -46,6 +46,7 @@ a:link, a:visited {
     font-family: 'Bangers', cursive;
     font-size: 25px;
     box-shadow: 0 5px 5px rgba(0,0,0,0.19);
+    z-index: 20;
 }
 
 #internal-links {
